--- a/.github/workflows/th.yml
+++ b/.github/workflows/th.yml
@@ -15,4 +15,4 @@ jobs:
     - name: Secret Scanning
       uses: trufflesecurity/trufflehog@main
       with:
-        extra_args: --config config.yaml
+        extra_args: --config config.yml
